--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -395,3 +394,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,pycharm,virtualenv,macos,windows,linux
 
 /Dataset/*
+ift6758_project
+/Dataset
