--- a/milestone3/docker-compose.yaml
+++ b/milestone3/docker-compose.yaml
@@ -6,25 +6,25 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile.serving
-     args:
-       ARG: <ARG>
-   image: ift6758/serving:<TAG>
-   ports:
-     - <SERVING_PORT>:<SERVING_PORT>
-   environment:
-     DOCKER_ENV_VAR = ${LOCAL_ENV_VAR}
-#### Uncomment below when you're ready to add the final notebook container to your docker compose
- streamlit:
-   build:
-     context: ./
-     dockerfile: ./Dockerfile.streamlit
-     args:
-       ARG: <ARG>
-   image: ift6758/streamlit:<TAG>
-   ports:
-     - <STREAMLIT_PORT>:<STREAMLIT_PORT>
-   environment:
-     OTHER_DOCKER_ENV_VAR = ${OTHER_LOCAL_ENV_VAR}
-      
+      args:
+        ARG: SERVING_PORT=5000
+    image: my-flask-app
+    ports:
+     - 5000:5000
+    networks:
+      - mynetwork
 
-     
+  streamlit:
+    build: 
+      context: ./
+      dockerfile: ./Dockerfile.streamlit
+    ports:
+      - 8501:8501
+    depends_on:
+      - serving
+    image: streamlit-app
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
