--- a/milestone3/Dockerfile.serving
+++ b/milestone3/Dockerfile.serving
@@ -8,10 +8,12 @@ COPY ./log_reg_dist.sav /app
 
 RUN pip install -r requirements.txt
 
-ARG SERVING_PORT
-ENV SERVING_PORT=5000
+# ARG SERVING_PORT
+# ENV SERVING_PORT=${SERVING_PORT}
+# EXPOSE ${SERVING_PORT}
+
 EXPOSE 5000
 
 ENV COMET_API_KEY comet_api
 
-CMD gunicorn --bind 0.0.0.0:5000 app:app
+CMD exec gunicorn --bind 0.0.0.0:5000 app:app
