--- a/milestone3/docker-compose.yaml
+++ b/milestone3/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     image: my-flask-app
     ports:
      - 5000:5000
+    environment:
+      - COMET_API_KEY=j3DrC3ChXkR42WfPCUh5EIkye
     networks:
       - mynetwork
 
